mongodb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: sledrich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0.20-rc3-jammy
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
      volumes:
      - name: mongodb-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: sledrich
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
